--- a/web/static/css/listen.css
+++ b/web/static/css/listen.css
@@ -13,8 +13,21 @@
 }
 
 #title {
-    font-size: medium;
+    font-size: 11.5pt;
     margin-bottom: 10px;
+    font-weight: 400;
+}
+
+h2 {
+    font-weight: 400;
+    font-size: 11.3;
+}
+
+.description {
+    background-color: var(--surface0);
+    border-radius: 5px;
+    margin: 15px 0;
+    padding: 7px;
 }
 
 audio {
