--- a/web/static/css/base.css
+++ b/web/static/css/base.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 body {
     background-color: var(--base);
     color: var(--text);
     font-size: 11pt;
+    font-family: "Inter", sans-serif;
 }
 
 footer {
