--- a/web/static/css/listen.css
+++ b/web/static/css/listen.css
@@ -12,6 +12,33 @@
     display: block;
 }
 
+#toolbar-options-div {
+    transition: all 1s ease-in-out;
+    opacity: 0;
+    display: none;
+    width: max-content;
+    align-content: end;
+    position: fixed;
+    right: 10;
+    top: 80;
+    ul {
+
+        border-radius: 10px;
+        list-style: none;
+        background-color: var(--crust);
+        width: max-content;
+        padding: 10px;
+        margin-left: auto;
+        align-content: center;
+
+        li {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+    }
+}
+
 #title {
     font-size: 11.5pt;
     margin-bottom: 10px;
