--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -208,6 +208,12 @@ nav span:not(.material-symbols-rounded) {
 
 /* ----breakpoints---- */
 
+@media screen and (min-width: 956px) {
+    #toolbar-options-div {
+        width: calc(100dvw - 250px - 10px) !important;
+    }
+}
+
 @media screen and (max-width: 954px) {
     body {
         display: block;
