--- a/web/static/css/index.css
+++ b/web/static/css/index.css
@@ -21,7 +21,7 @@ nav.sidebar {
 
 .floating-navbar {
     display: block;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: 10;
