--- a/web/static/css/new.css
+++ b/web/static/css/new.css
@@ -22,3 +22,9 @@ form {
     padding: 20px;
     width: 50%;
 }
+
+span.required::after {
+    content: " *";
+    color: var(--red);
+    font-size: 13pt;
+}
